# sorting

./: Cargo.toml  Makefile  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
apps/web/: project.json
apps/web/src/: index.html
apps/web/src/app/: app.tsx
apps/web/src/hooks/: useSortingSteps.tsx
libs/algorithms/: Cargo.toml  project.json
libs/algorithms/src/: bubble_sort.rs  gnome_sort.rs  heap_sort.rs  insertion_sort.rs  lib.rs  quick_sort.rs  selection_sort.rs  step.rs
libs/functions/: jest.config.ts  package.json  project.json
libs/functions/src/: index.ts
libs/functions/src/lib/animateStep/: animateStep.ts  index.ts
libs/functions/src/lib/changeState/: changeState.ts  index.ts
libs/functions/src/lib/checkIfSorted/: checkIfSorted.ts  index.ts
libs/functions/src/lib/generateNewArray/: generateNewArray.ts  index.ts
libs/functions/src/lib/startAnimation/: index.ts  startAnimation.ts
libs/functions/src/lib/swap/: swap.ts
libs/hooks/src/: index.ts
libs/hooks/src/lib/useSort/: index.tsx  useSort.tsx
libs/hooks/src/lib/useVisualizationData/: index.tsx  useVisualizationData.tsx
libs/types/: package.json
libs/types/src/lib/: index.ts
libs/ui/src/: index.ts
libs/ui/src/lib/AlgorithmSelect/: algorithmSelect.style.tsx  algorithmSelect.tsx  index.tsx
libs/ui/src/lib/Button/: button.style.ts  button.tsx
libs/ui/src/lib/ControlPanel/: controlPanel.tsx  index.tsx
libs/ui/src/lib/Header/: header.style.tsx  header.tsx
libs/wasm/: Cargo.toml  project.json
libs/wasm/src/: lib.rs
(+10 files in other folders)
