[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.3"


[lib]
crate-type = ["cdylib", "rlib"]